# meditrac-aggregatore-service

./: .dockerignore  Dockerfile  aggregator_service.py  cronjob.yaml  deploy.sh  pyproject.toml  redshift_connection.py
.github/workflows/: deploy.yaml
